--- a/templates/release/start_release.twig
+++ b/templates/release/start_release.twig
@@ -54,13 +54,10 @@
             <a href="{{ uriFor('build', {'build': build.id}) }}">{{ build.id|short_guid }}</a>
         </li>
 
-        {# todo #}
-        {% set is_gitref_current = githubCommitIsCurrent(build.application, build.reference, build.commit) %}
-        {# todo #}
-
+        {% set is_current = is_vcs_ref_current(build.application, build) %}
         <li>
             <h6>Version Control</h6>
-            {{ git_macros.vcs_ref(build.application, build) }}
+            {{ git_macros.vcs_ref(build.application, build, is_current) }}
             {{ git_macros.vcs_commit(build.application, build) }}
         </li>
 
