--- a/sass/_elements.scss
+++ b/sass/_elements.scss
@@ -248,6 +248,7 @@ table {
     td {
         padding: .25em;
         margin: 0;
+        text-align: left;
     }
 }
 
@@ -302,7 +303,7 @@ hr {
     display: block;
     height: 1px;
     border: 0;
-    border-top: 1px solid $grey;
+    border-top: .25em solid $light-grey;
     padding: 0;
     margin: 1em 0;
 }
