Fix language on credentials page

--- a/templates/credentials/credentials.twig
+++ b/templates/credentials/credentials.twig
@@ -11,8 +11,8 @@
 
 {% block content %}
     <p>
-        Credentials are secret passwords, API keys or other secret information that is used by to access other resources by
-        Hal such as Artifacts, Deployments, Version Control, or Identity Providers.
+        Credentials are secret passwords, API keys or other secret information that is used by Hal to access other resources
+        such as Artifacts, Deployments, Version Control, or Identity Providers.
     </p>
 
     {{ block('cred_table') }}
