--- a/templates/idp/partial.idp.twig
+++ b/templates/idp/partial.idp.twig
@@ -23,25 +23,23 @@
     {% import 'macros.twig' as macros %}
 
     <h4>Client ID</h4>
-    {{ macros.output_parameter(idp, 'ghe.client_id') }}
-
-    <h4>Client Secret</h4>
-    {{ macros.output_parameter(idp, 'ghe.client_secret') }}
-
-    <h4>API Domain</h4>
-    {{ macros.output_parameter(idp, 'ghe.domain') }}
-{% endblock %}
-
-{% block ghe_meta %}
-    {% import 'macros.twig' as macros %}
-
-    <h4>Client ID</h4>
     {{ macros.output_parameter(idp, 'gh.client_id') }}
 
     <h4>Client Secret</h4>
     {{ macros.output_parameter(idp, 'gh.client_secret') }}
 
-    <h4>Domain</h4>
-    {{ macros.output_parameter(idp, 'gh.api_domain') }}
+{% endblock %}
+
+{% block ghe_meta %}
+    {% import 'macros.twig' as macros %}
+
+    <h4>Base URL</h4>
+    {{ macros.output_parameter(idp, 'ghe.url') }}
+
+    <h4>Client ID</h4>
+    {{ macros.output_parameter(idp, 'ghe.client_id') }}
+
+    <h4>Client Secret</h4>
+    {{ macros.output_parameter(idp, 'ghe.client_secret') }}
 
 {% endblock %}
