--- a/templates/idp/partial.idp_form.twig
+++ b/templates/idp/partial.idp_form.twig
@@ -5,8 +5,6 @@
 {% block ldap_fields %}
     {% import 'macros.form.twig' as form_macros %}
 
-    {% import 'macros.form.twig' as form_macros %}
-
     <li data-type-specific data-ldap>
         {% set has_error = form_macros.has_error(errors, 'ldap_host') ? ' is-error' : '' %}
         <label for="ldap_host">LDAP host or server</label>
@@ -49,22 +47,22 @@
     <li data-type-specific data-ghe>
         {% set has_error = form_macros.has_error(errors, 'ghe_client_id') ? ' is-error' : '' %}
         <label for="ghe_client_id">Client ID</label>
-        <input class="text-input{{ has_error }}" type="text" name="ghe_client_id" id="ghe_client_id" maxlength="100" value="{{ form.ghe_client_id }}" placeholder="121ace401de20d06f00d" autocomplete="off">
+        <input class="text-input{{ has_error }}" type="text" name="ghe_client_id" id="ghe_client_id" maxlength="100" value="{{ form.ghe_client_id }}">
         <small>Client ID provided by GitHub.</small>
     </li>
 
     <li data-type-specific data-ghe>
         {% set has_error = form_macros.has_error(errors, 'ghe_client_secret') ? ' is-error' : '' %}
         <label for="ghe_client_secret">Client Secret</label>
-        <input class="text-input{{ has_error }}" type="text" name="ghe_client_secret" id="ghe_client_secret" maxlength="100" value="{{ form.ghe_client_secret }}" placeholder="0d06f00d04e110da17e00d06f00d04ell0da17e0" autocomplete="off">
+        <input class="text-input{{ has_error }}" type="text" name="ghe_client_secret" id="ghe_client_secret" maxlength="100" value="{{ form.ghe_client_secret }}" autocomplete="off">
         <small>Client Secret provided by GitHub.</small>
     </li>
 
     <li data-type-specific data-ghe>
-        {% set has_error = form_macros.has_error(errors, 'ghe_domain') ? ' is-error' : '' %}
-        <label for="ghe_domain">Domain</label>
-        <input class="text-input{{ has_error }}" type="text" name="ghe_domain" id="ghe_domain" maxlength="100" value="{{ form.ghe_domain }}" placeholder="https://server.example.com">
-        <small>Location of the GitHub Enterprise installation. Expected syntax: <code>https://server.example.com</code></small>
+        {% set has_error = form_macros.has_error(errors, 'ghe_url') ? ' is-error' : '' %}
+        <label for="ghe_url">Base URL</label>
+        <input class="text-input{{ has_error }}" type="text" name="ghe_url" id="ghe_url" maxlength="100" value="{{ form.ghe_url }}" placeholder="https://github.example.com">
+        <small>Base URL of the GitHub Enterprise installation. Expected syntax: <code>https://github.example.com</code></small>
     </li>
 {% endblock %}
 
@@ -74,22 +72,14 @@
     <li data-type-specific data-gh>
         {% set has_error = form_macros.has_error(errors, 'gh_client_id') ? ' is-error' : '' %}
         <label for="gh_client_id">Client ID</label>
-        <input class="text-input{{ has_error }}" type="text" name="gh_client_id" id="gh_client_id" maxlength="100" value="{{ form.gh_client_id }}" placeholder="121ace401de20d06f00d" autocomplete="off">
+        <input class="text-input{{ has_error }}" type="text" name="gh_client_id" id="gh_client_id" maxlength="100" value="{{ form.gh_client_id }}">
         <small>Client ID provided by GitHub.</small>
-
     </li>
 
     <li data-type-specific data-gh>
         {% set has_error = form_macros.has_error(errors, 'gh_client_secret') ? ' is-error' : '' %}
         <label for="gh_client_secret">Client Secret</label>
-        <input class="text-input{{ has_error }}" type="text" name="gh_client_secret" id="gh_client_secret" maxlength="100" value="{{ form.gh_client_secret }}" placeholder="0d06f00d04e110da17e00d06f00d04ell0da17e0" autocomplete="off">
+        <input class="text-input{{ has_error }}" type="text" name="gh_client_secret" id="gh_client_secret" maxlength="100" value="{{ form.gh_client_secret }}" autocomplete="off">
         <small>Client Secret provided by GitHub.</small>
-    </li>
-
-    <li data-type-specific data-gh>
-        {% set has_error = form_macros.has_error(errors, 'gh_api_domain') ? ' is-error' : '' %}
-        <label for="gh_api_domain">API Domain</label>
-        <input class="text-input{{ has_error }}" type="text" name="gh_api_domain" id="gh_api_domain" maxlength="100" value="{{ form.gh_api_domain|default('https://api.github.com') }}" placeholder="https://api.github.com">
-        <small>GitHub API. Expected url: <code>https://api.github.com</code></small>
     </li>
 {% endblock %}
