Strip trailing slash on vcs github url

--- a/templates/user/add_user.twig
+++ b/templates/user/add_user.twig
@@ -75,6 +75,14 @@
                 </li>
 
                 {{ block('internal_provider_form') }}
+
+                <li data-type-specific data-gh>
+                    {{ macros.alert('error', 'GitHub.com users cannot be added manually.') }}
+                </li>
+                <li data-type-specific data-ghe>
+                    {{ macros.alert('error', 'GitHub users cannot be added manually.') }}
+                </li>
+
             </ul>
 
         {% else %}
