Convert remaining di to php

--- a/templates/application/add_application.twig
+++ b/templates/application/add_application.twig
@@ -12,7 +12,7 @@
     {{ form_macros.form_errors(errors, is_csrf_error) }}
 
     <form method="post" class="js-vcs-form">
-        {{ form_macros.csrf_input('application.add') }}
+        {{ form_macros.csrf_input('applications.add') }}
 
         <ul class="form-fields form-wrapper">
             <li>
