--- a/templates/application/applications.twig
+++ b/templates/application/applications.twig
@@ -15,7 +15,7 @@
     {{ block('apps_table') }}
 
     <p>
-        <a class="btn" href="{{ uriFor('application.add') }}">Add Application</a>
+        <a class="btn" href="{{ uriFor('applications.add') }}">Add Application</a>
         <a class="btn" href="{{ uriFor('organization.add') }}">Add Organization</a>
     </p>
 {% endblock %}
