--- a/templates/credentials/add_credential.twig
+++ b/templates/credentials/add_credential.twig
@@ -15,7 +15,7 @@
     {{ form_macros.form_errors(errors, is_csrf_error) }}
 
     <form method="post" class="js-credential-form">
-        {{ form_macros.csrf_input('credential.add') }}
+        {{ form_macros.csrf_input('credentials.add') }}
 
         <ul class="form-fields form-wrapper">
             <li>
