--- a/templates/credentials/credentials.twig
+++ b/templates/credentials/credentials.twig
@@ -19,7 +19,7 @@
 
     <p>
         {% if is_admin %}
-            <a class="btn" href="{{ uriFor('credential.add') }}">Add Credentials</a>
+            <a class="btn" href="{{ uriFor('credentials.add') }}">Add Credentials</a>
         {% else %}
             {{ macros.disabled_button('Add Credentials') }}
         {% endif %}
