--- a/templates/target-template/add_template.twig
+++ b/templates/target-template/add_template.twig
@@ -31,7 +31,7 @@
     {{ form_macros.form_errors(errors, is_csrf_error) }}
 
     <form method="post" class="js-target-form">
-        {{ form_macros.csrf_input('template.add') }}
+        {{ form_macros.csrf_input('templates.add') }}
 
         <ul class="form-fields form-wrapper">
             <li>
